--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,57 @@ position: relative;
     background-color: var(--success);
 }
 
+.footer-form-wrap {
+    margin-left: 80px;
+}
+
+.footer-form-text {
+    margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: var(--white-background);
+}
+
+.footer-input::placeholder {
+    color: var(--white-background);
+}
+
+.footer-form-btn {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    background-color: var(--primary-brand);
+    border-radius: 4px;
+    border: none;
+    color:var(--white-background);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding: 8px 24px;
+}
+
+.footer-form-btn svg {
+    margin-left: 16px;
+}
+
+
 
 
 /*------------portfolio--------------*/
@@ -637,6 +688,7 @@ position: relative;
     background-color: var(--modal-background);
     box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px;
 }
 
 .is-hidden {
@@ -672,7 +724,138 @@ position: relative;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-title {
+    color: var(--dark);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 16px;
+}
 
 
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid var(--modal-overlay);
+    background-color: transparent;
+    padding-left: 38px;
+    padding-right: 24px;
+    margin-bottom: 8px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color: var(--primary-brand);
+}
+
+.form-btn {
+    display: block;
+    width: 169px;
+    height: 56px;
+    color: var(--white-background);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding: 16px 32px;
+    border-radius: 4px;
+    background-color: var(--primary-brand);
+    margin: 0 auto;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--subtle-text);
+    display: block;
+    margin-bottom: 4px;
+}
 
 
+.modal-input-icon {
+    position: relative;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+    fill: var(--dark);
+    position: absolute;
+    left: 16px;
+    top: 44%;
+    transform: translateY(-50%);
+}
+
+.modal-input:focus + .modal-icon {
+    fill: var(--primary-brand);
+}
+
+.modal-comment {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--modal-overlay);
+    border: 1px solid var(--modal-overlay);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-comment:focus {
+    border-color: var(--primary-brand);
+}
+
+.modal-check {
+    margin-bottom: 24px;
+}
+
+.modal-check-link {
+    color: var(--primary-brand);
+    text-decoration: underline;
+}
+
+.modal-check-text {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    
+}
+
+.modal-check-text span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid var(--modal-overlay);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-check-icon {
+    fill: transparent;
+}
+
+.modal-checkbox:checked + .modal-check-text span {
+    background-color: var(--pressed-state);
+    border: none;
+}
+
+.modal-checkbox:checked + .modal-check-text svg {
+    fill: var(--light);
+}
+
+.modal-checkbox:focus + .modal-check-text span {
+    border-color: var(--pressed-state);
+}
