--- a/css/styles.css
+++ b/css/styles.css
@@ -427,10 +427,10 @@ position: relative;
 .footer-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .footer-logo-text {
-    margin-right: 120px;
 }
 
 .footer-logo{
@@ -441,8 +441,9 @@ position: relative;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-top: 98px;
+    padding-bottom: 16px;
+    text-align: center;
 }
 
 .footer-text {
@@ -451,7 +452,8 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
-    padding-bottom: 100px;
+    padding-bottom: 72px;
+    text-align: center;
 }
 
 .footer-social {
@@ -465,6 +467,7 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .footer-list-icon {
@@ -473,6 +476,7 @@ position: relative;
     gap: 16px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 72px;
 }
 
 
@@ -495,16 +499,17 @@ position: relative;
 }
 
 .footer-form-wrap {
-    margin-left: 80px;
 }
 
 .footer-form-text {
-    margin-bottom: 16px;
+    margin-bottom: 23px;
 }
 
 .footer-form {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
 }
 
 .footer-input {
@@ -538,6 +543,7 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.04em;
     padding: 8px 24px;
+    margin-bottom: 96px;
 }
 
 .footer-form-btn svg {
