--- a/css/media.css
+++ b/css/media.css
@@ -63,8 +63,7 @@
 
     .footer-list {
         align-items: baseline;
-        justify-content: start;
-        margin-left: 108px;
+        justify-content: center;
     }
 
     .footer-logo {
@@ -82,6 +81,10 @@
 
     .footer-form-text {
         margin-bottom: 16px;
+    }
+
+    .footer-form-btn {
+        margin-right: 46px;
     }
 
     .footer-form {
@@ -167,6 +170,10 @@
     .footer-list {
         gap: 80px;
         margin-left: 156px;
+    }
+    
+    .footer-form-btn {
+        margin-right: 0;
     }
 
     .footer-text {
